fixed issues on 380px screen

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="w-full h-screen flex items-center justify-center">
     <div
       id="container"
-      class="w-[25rem] bg-midnightBlack flex flex-col items-center space-y-8 px-8 py-6 rounded-xl"
+      class="w-[23rem] bg-midnightBlack flex flex-col items-center space-y-8 px-8 py-6 rounded-xl md:min-w-[22rem] lg:min-w-[25rem]"
     >
       <img src="./resources/word-scramblle-logo.svg" alt="" />
 
