--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body class="w-full h-screen flex items-center justify-center">
     <div
       id="container"
-      class="w-[23rem] bg-midnightBlack flex flex-col items-center space-y-8 px-8 py-6 rounded-xl md:min-w-[22rem] lg:min-w-[25rem]"
+      class="w-[20rem] bg-midnightBlack flex flex-col items-center space-y-8 px-8 py-6 rounded-xl md:min-w-[22rem] lg:min-w-[25rem]"
     >
       <img src="./resources/word-scramblle-logo.svg" alt="" />
 
@@ -62,6 +62,7 @@
       <template id="input-field-template">
         <input
           autocomplete="off"
+          maxlength="1"
           type="text"
           class="text-center w-11 h-11 rounded-lg bg-transparent text-softCloud text-2xl border-2 border-[#636568] outline-none caret-transparent"
         />
