--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@
       <template id="input-field-template">
         <input
           autocomplete="off"
+          autocorrect="off"
+          autocapitalize="off"
           maxlength="1"
           type="text"
           class="text-center w-11 h-11 rounded-lg bg-transparent text-softCloud text-2xl border-2 border-[#636568] outline-none caret-transparent"
